--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="css/style.css">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
-<link rel="icon" type="image/png" href="favicon.png" />
+<link rel="icon" type="image/png" href="favicon.ico" />
 <link href="css/font-awesome.min.css" rel="stylesheet">
 	<meta charset="UTF-8">
 	<title>Document</title>
